--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div id="student-flow">
 
       <!-- Kort som länk för individuell student -->
-      <a href="student.index">
+      <a href="caspar/index.html" class="no-decoration">
         <div class="student-card">
-          <h3>Student-Name</h3>
+          <h3>Caspar</h3>
           <div id="student1-img"></div>
         </div>
       </a>
