add color to sticky note, and change max/min with on <main>

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
   <main>
     <h1>JSU24</h1>
-    <div id="billboard">
+    <div id="billboard" class="card-shadow">
       <!-- Sammlingsplats för nya meddelanden för vännerna -->
       <h2>Billboard</h2>
 
       <!-- Sticker för att lägga till nya uppdateringar på sidan -->
       <div id="sticker-page">
 
-        <div class="news-sticker">
+        <div class="news-sticker orange-sticker">
           <h3>Name</h3>
           <p>Lorem text och annat</p>
         </div>
