--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +27,15 @@
       <!-- Sticker för att lägga till nya uppdateringar på sidan -->
       <div id="sticker-page">
 
-        <div class="news-sticker orange-sticker">
+        <div class="sticker orange">
+          <h3>Name</h3>
+          <p>Lorem text och annat</p>
+        </div>
+        <div class="sticker yellow">
+          <h3>Name</h3>
+          <p>Lorem text och annat</p>
+        </div>
+        <div class="sticker red">
           <h3>Name</h3>
           <p>Lorem text och annat</p>
         </div>
