--- a/spebb/calculator/index.html
+++ b/spebb/calculator/index.html
@@ -5,29 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="" type="" href="">
+    <link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
+
     <div class="calc">
         <div class="calc-top">
-
+            <input type="" name="inputBox" value="">
         </div>
         <div class="calc-main">
-            <button type="button" onclick="">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-            <button type="button">4</button>
-            <button type="button">5</button>
-            <button type="button">6</button>
-            <button type="button">7</button>
-            <button type="button">8</button>
-            <button type="button">9</button>
-            <button type="button">0</button>
-            <button type="button">.</button>
+            <div class="main-top">
+                <button type="button" onclick="calcClear()">C</button>
+
+            </div>
+            <div class="main-left">
+            <button type="button" onclick="calcInput()">1</button>
+            <button type="button" onclick="calcInput()">2</button>
+            <button type="button" onclick="calcInput()">3</button>
+            <button type="button" onclick="calcInput()">4</button>
+            <button type="button" onclick="calcInput()">5</button>
+            <button type="button" onclick="calcInput()">6</button>
+            <button type="button" onclick="calcInput()">7</button>
+            <button type="button" onclick="calcInput()">8</button>
+            <button type="button" onclick="calcInput()">9</button>
+            <button type="button" onclick="calcInput()">0</button>
+            <button type="button" onclick="calcInput()">.</button>
+            </div>
+
+            <div class="main-right">
+                <button type="button" onclick="calcSides()">/</button>
+                <button type="button" onclick="calcSides()">*</button>
+                <button type="button" onclick="calcSides()">-</button>
+                <button type="button" onclick="calcSides()">+</button>
+                <button type="button" onclick="calcSides()">=</button>
+            </div>
         </div>
     </div>
+    <script type="type/javascript" src="calculator.js"></script>
 </body>
 
 </html>
