add spebb folder and add calculator link from his page

--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
     <div id="student-flow">
 
       <!-- Kort som länk för individuell student -->
-      <a href="caspar/index.html" class="no-decoration">
-        <div class="student-card">
+      <a href="caspar/index.html" class="student-card no-decoration">
+        <div>
           <h3>Caspar</h3>
+          <div id="student1-img"></div>
+        </div>
+      </a>
+      <a href="spebb/index.html" class="student-card no-decoration">
+        <div>
+          <h3>Spebb</h3>
           <div id="student1-img"></div>
         </div>
       </a>
