--- a/spebb/index.html
+++ b/spebb/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-    <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Ello there!</h1>
-    <ul>
-        <a href="">Calculator</a>
-    </ul>
+  <h1>Ello there!</h1>
+  <ul>
+    <a href="calculator/index.html">Calculator</a>
+  </ul>
 </body>
 
 </html>
