create hangman foundation

--- a/ingo/hangman/hangman.html
+++ b/ingo/hangman/hangman.html
@@ -11,14 +11,12 @@
       <h1>HANGMAN</h1>
     </header>
     <main>
-      <img src="images/hangman.png" alt="" />
+      <img id="hangman" src="images/hg_10.png" alt="" />
       <div id="wordDisplay">
-        <div class="letterContainer"></div>
-        <div class="letterContainer"></div>
-        <div class="letterContainer"></div>
-        <div class="letterContainer"></div>
-        <div class="letterContainer"></div>
+        <button id="playBtn" onclick="playGame()">PLAY</button>
+        <!-- <div class="letterContainer">_</div> -->
       </div>
     </main>
+    <script src="hangman.js"></script>
   </body>
 </html>
