linking between pages

--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Collective Project</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Sans:700|Playfair+Display"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Collective Project</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:700|Playfair+Display" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-</head>
+  <body>
+    <main>
+      <h1>JSU24</h1>
+      <div id="billboard" class="card-shadow">
+        <!-- Sammlingsplats för nya meddelanden för vännerna -->
+        <h2>Billboard</h2>
 
-<body>
-  <main>
-    <h1>JSU24</h1>
-    <div id="billboard" class="card-shadow">
-      <!-- Sammlingsplats för nya meddelanden för vännerna -->
-      <h2>Billboard</h2>
-
-      <!-- Sticker för att lägga till nya uppdateringar på sidan -->
-      <div id="sticker-page">
-
-        <div class="news-sticker orange-sticker">
-          <h3>Name</h3>
-          <p>Lorem text och annat</p>
+        <!-- Sticker för att lägga till nya uppdateringar på sidan -->
+        <div id="sticker-page">
+          <div class="news-sticker orange-sticker">
+            <h3>Name</h3>
+            <p>Lorem text och annat</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="student-flow">
-
-      <!-- Kort som länk för individuell student -->
-      <a href="caspar/index.html" class="no-decoration">
-        <div class="student-card">
-          <h3>Caspar</h3>
-          <div id="student1-img"></div>
-        </div>
+      <div id="student-flow">
+        <!-- Kort som länk för individuell student -->
+        <a href="caspar/index.html" class="no-decoration">
+          <div class="student-card">
+            <h3>Caspar</h3>
+            <div id="student1-img"></div>
+          </div>
+        <a href="ingo/ingo.html" class="no-decoration">
+          <div class="student-card">
+            <h3>Ingo</h3>
+            <div id="ingo-img"></div>
+          </div>
       </a>
-
-    </div>
-  </main>
-</body>
-
+      </div>
+    </main>
+  </body>
 </html>
