--- a/ingo/hangman/hangman.html
+++ b/ingo/hangman/hangman.html
@@ -17,6 +17,9 @@
         <!-- <div class="letterContainer">_</div> -->
       </div>
     </main>
+    <footer>
+      <a href="/ingo/ingo.html">BACK</a>
+    </footer>
     <script src="hangman.js"></script>
   </body>
 </html>
