--- a/ingo/ingo.html
+++ b/ingo/ingo.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ingo</title>
-    <link rel="stylesheet" href="ingo.css">
+    <link rel="stylesheet" href="ingo.css" />
   </head>
   <body>
-    <div></div>
+    <header></header>
+    <main>
+      <div>
+        <a href="hangman/hangman.html">HANGMAN</a><br />
+        <a href="/index.html">BACK</a>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
