update ingo homepage

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="student1-img"></div>
           </div>
         </a>
-        <a href="ingo/ingo.html" class="no-decoration">
+        <a href="ingo/elgringo.html" class="no-decoration">
           <div class="student-card">
             <h3>Ingo</h3>
             <div id="ingo-img"></div>
