--- a/ingo/hangman/hangman.html
+++ b/ingo/hangman/hangman.html
@@ -18,7 +18,7 @@
       </div>
     </main>
     <footer>
-      <a href="/ingo/ingo.html">BACK</a>
+      <a href="/ingo/elgringo.html">BACK</a>
     </footer>
     <script src="hangman.js"></script>
   </body>
